--- a/WebSiteBanSach/Web.config
+++ b/WebSiteBanSach/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WebSiteBanSach-20141021110945.mdf;Initial Catalog=aspnet-WebSiteBanSach-20141021110945;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Data Source=ADMIN-PC\SQLEXPRESS;Initial Catalog=QuanLyBanSach;Integrated Security=True" providerName="System.Data.SqlClient"/>
     <add name="QuanLyBanSachEntities" connectionString="metadata=res://*/Models.QuanLyBanSachModel.csdl|res://*/Models.QuanLyBanSachModel.ssdl|res://*/Models.QuanLyBanSachModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-TKBGRT5\SQLEXPRESS;initial catalog=QuanLyBanSach;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <appSettings>
